styles.css
/* ... */
                                                /* /////////////
                                                    HEADER
                                                ///////////// */
 

.header__logo {
    height: 100%;
    width: 100px;
}

.header__logo img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}






                                                    /*////////// 
                                                       navbar
                                                    //////////*/
 
 /* this provides a background place holder after the hamburger is clicked and the navbar moves */
.nav-wrap {
     width:100%;
     height:37px;
     background:var(--clr-nav);
     /* position:sticky;
     z-index:999;
     top:0; */
 }

  .sticky-nav{
    grid-area: n;
    display: flex;
    width: 100%;
    justify-content: center;
    background: var(--clr-nav);
    /* position: sticky;
    top: 0; */
    z-index: 999;
    padding: 0.3em;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.616);
    /* transition: 0.5s; */
}

#hamburger {
    display: none;
}

/* this moves the theme icon to the left side of the navbar on desktop */
.theme {
    position: absolute;
    z-index: 999;
    left:50px;
}

.navbar__ul {
    display: flex;
    width: 50%;
    max-width:700px;
    justify-content: space-between;
    align-items: center;
    margin: 0.25em;
    padding: 0;
    list-style-type: none;
}

/* these are the IDs for the theme/mode icon */
#modeToggleDesktop {
    color: var(--clr-links);
    cursor: pointer;
    transition: 1s;
}

#modeToggleDesktop.light-theme {
    color: var(--clr-highlight);
    transform: rotate(180deg);
}

.navbar__ul a {
    color: var(--clr-links);
    transition: 0.5s;
}

.navbar__ul a:hover {
    color: rgb(179, 65, 255);
}





  
/* main content grid */

.main-content__grid {
    display:grid;
    grid-template-columns: minmax(200px, 250px) minmax(500px, 750px)  minmax(200px, 250px);
    grid-template-rows: 1fr;
    grid-template-areas: ". a s";
    /* background:var(--clr-dark); */
    width:auto; 
    margin:2em;
    grid-gap:1em;
  }
  
  .main-content__sidebar {
    grid-area: s;
   
    /* background:var(--clr-dark); */
    /* padding:0 1em 1em 1em; */
  /*   display:flex;
    flex-direction:column; */
    
  }

  .sidebar__h3 {
    
    font-weight:400;
    text-align: center;
    padding:1em 0 0 0;
    font-size:2rem;    
}


  .sidebar-wrap {
  
    position:sticky;
    top:1em;
    background:rgba(33,33,33,.5);
    padding: .5em;
    border-radius:5px;
  }


  .sidebar__item-wrap   {
    /* background:rgba(33,33,33,.5); */
    display:flex;
    flex-direction:column;
    
   
  }
  
  .sidebar__item {
    /* height:200px; */
    width:100%;
    background:var(--clr-nav);
    margin-top:1em;
   
  }


                                                 /* /////////////
                                                     MAIN CONTENT
                                                   ////////////// */

.newest-post {
    height: 100%;
    /* width: 70ch; */
    background: rgb(33, 33, 33);
    padding: 3em;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.589);
    border-radius: 5px;
}

.newest-post__p {
    margin: 1em 0 0 0;
}

/* sticky navbar for desktop*/

#sticky-navbar {
    display: flex;
}

/* #mobile-navbar {
    display: none;
} */

.newest-post__h2 {
    font-size: 3.5rem;
    margin: 0 0 0.5em 0;
}

.newest-post__h3 {
    color: var(--clr-links);
}

/* .newest-post iframe {
    width: 100%;
    
   
} */


/* this is the read more button that expands the newest post if clicked */
#newest-post__button {
    cursor: pointer;
    border: solid var(--clr-links) 2px;
    text-align: center;
    padding: 0.5em;
    border-radius: 999px;
    text-decoration: none;
    color: var(--clr-links);
    transition: 0.25s;
    display: flex;
    justify-content: center;
    /* width: 100%; */
    margin: 1em;
}

#newest-post__button:hover {
    color: white;

    background: var(--clr-accent);
}

/* when the "read more" button is clicked, the .show class is toggled on or off */
.newest-post--hidden {
    display: none;
}

.newest-post--hidden.show {
    display: block;
}

.newest-post--hidden.show p {
    animation: fadeIn 3s;
}

/* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
#backToTop {
    cursor: pointer;
    border: solid var(--clr-links) 2px;
    text-align: center;
    padding: 0.5em;
    border-radius: 999px;
    text-decoration: none;
    color: var(--clr-links);
    transition: 0.25s;
    display: none;
    justify-content: center;
    /* width: 100%; */
    margin: 1em;
}

#backToTop:hover {
    color: white;

    background: var(--clr-accent);
}
  
  
  
  .main-content__article {
    grid-area: a;
    background:var(--clr-content-bg);
    padding:1em;
    border-radius:5px;
    
    
  }


  .iframe-wrap {
      
      width:100%;
  }


  .main-content__article iframe {
      margin-top:1em;
     max-width:560px;
     width:100%;
  }
  
  .article__content {
      display:flex;
      flex-direction:column;
      height:100%;
  }
  
  
  .article__content p {
    max-width:85ch;
  }


                                            /* //////////
                                                FOOTER
                                             /////////// */

.grid-container__footer {
    align-items: center;
    justify-content: center;
    display: flex;
}

.footer__content {
    display: flex;
    align-items: center;
    justify-content: space-around;
    height: 100%;
    width: 225px;
}

i {
    color: var(--clr-links);
    /* transform: scale(200%); */
    transition: 0.25s;
}

i:hover {
    /* transform: scale(230%); */
    color: var(--clr-highlight);
}
/* ... */

